--- a/extra/gamescope-launcher.desktop
+++ b/extra/gamescope-launcher.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Gamescope laucher
 Comment=launch gamescope with extra settings
-Exec=/opt/gamescope-launcher/gamescope_launcher
+Exec=gamescope_launcher
 Icon=gamescope-launcher
 Terminal=false
 Type=Application
